split home, login, register pages

--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -11,7 +11,7 @@
 			      </button>
 
             <!-- Logo -->
-            <a class="navbar-brand" href="index.html">BeFun</a>
+            <a class="navbar-brand" href="index.html">EtherDelta</a>
 
         </div>
 
@@ -22,6 +22,7 @@
                 <li><a href="#mu-about">About Us</a></li>
                 <li><a href="#mu-schedule">Schedule</a></li>
                 <li><a href="#mu-register">Register</a></li>
+                <li><a href="/login">Login</a></li>
                 <!-- <li><a href="#mu-pricing">Price</a></li>
                 <li><a href="#mu-speaker">Register</a></li>
                 <li><a href="#mu-sponsors">Sponsors</a></li>
