--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,77 +1,1 @@
-<header id="mu-hero" class="" role="banner">
-    <app-navbar></app-navbar>
-</header>
-
-<main role="main">
-    <!-- Start About -->
-    <section id="mu-about">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="mu-about-area">
-                        <!-- Start Feature Content -->
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="mu-about-left">
-                                    <img class="" src="assets/images/about.jpg" alt="Men Speaker">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="mu-about-right">
-                                    <h2>About Us</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam aliquam distinctio magni enim error commodi suscipit nobis alias nulla, itaque ex, vitae repellat amet neque est voluptatem iure maxime eius!</p>
-
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus in accusamus qui sequi nisi, sint magni, ipsam, porro nesciunt id veritatis quaerat ipsum consequatur laborum, provident veniam quibusdam placeat quam?
-                                    </p>
-
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis excepturi, cumque reiciendis.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Feature Content -->
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End About -->
-
-    <!-- Start Video -->
-    <section id="mu-video">
-        <div class="mu-video-overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="mu-video-area">
-                            <h2>Watch Video</h2>
-                            <a class="mu-video-play-btn" href="#"><i class="fa fa-play" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Start Video content -->
-        <div class="mu-video-content">
-            <div class="mu-video-iframe-area">
-                <a class="mu-video-close-btn" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
-                <!--<iframe width="854" height="480" src="https://www.youtube.com/watch?v=d3MfUozeXiI" frameborder="0" allowfullscreen></iframe>-->
-            </div>
-        </div>
-        <!-- End Video content -->
-
-    </section>
-    <!-- End Video -->
-
-
-    <!-- Schedule -->
-    <!-- Start Schedule  -->
-    <section id="mu-schedule">
-        <app-schedule></app-schedule>
-    </section>
-    <!-- register -->
-    <section id="mu-register">
-        <app-register></app-register>
-    </section>
-</main>
+<router-outlet></router-outlet>
