--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,51 +1,37 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="mu-register-area">
+<header id="mu-hero" role="banner">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="mu-register-area">
 
-                <div class="mu-title-area">
-                    <h2 class="mu-title">Register Form</h2>
-                    <p>
-                        <ngb-alert *ngIf="message" [type]="msgType" role="alert" [dismissible]="false">
-                            {{ message }}
-                        </ngb-alert>
-                    </p>
-                </div>
+                    <div class="mu-title-area">
+                        <h2 class="mu-title">Register Form</h2>
+                        <p>
+                            <ngb-alert *ngIf="message" [type]="msgType" role="alert" [dismissible]="false">
+                                {{ message }}
+                                <div *ngIf="showEDT" class="input-group text-center col-md-7 col-md-offset-7">
+                                    <span class="input-group-btn">
+                            <input type="text" class="form-control" [disabled]='true' [(ngModel)]="text">
 
-                <div class="mu-register-content">
-                    <form [formGroup]="registerForm" class="mu-register-form" (ngSubmit)="onFormSubmit()">
-                        <!-- <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="User Name" formControlName="username">
+        <button class="btn btn-default" [class.btn-success]= "isCopied" type="button" ngxClipboard [cbContent]="text" (cbOnSuccess)="isCopied1 = true">copy</button>
+      </span>
                                 </div>
-                            </div>
-                        </div> -->
+                            </ngb-alert>
 
-                        <!-- <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="First Name" formControlName="firstname">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
+                        </p>
 
-                                    <input class="form-control" placeholder="Last Name" formControlName="lastname">
-                                </div>
+                    </div>
 
-                            </div>
+                    <div class="mu-register-content">
+                        <form [formGroup]="registerForm" class="mu-register-form" (ngSubmit)="onFormSubmit()">
 
-                        </div> -->
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input class="form-control" type="email" placeholder="Email" formControlName="email">
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <div class="form-group">
+                                        <input class="form-control" type="email" placeholder="Email" formControlName="email">
+                                        <div class="" *ngIf="registerForm.controls.email.invalid && registerForm.controls.email.touched"> Email is invalid </div>
+                                    </div>
 
-                                </div>
-
-                                <div class="col-md-6">
-                                    <div *ngIf="registerForm.controls.email.invalid && registerForm.controls.email.touched"> Email is invalid </div>
                                 </div>
                             </div>
                             <div class="row">
@@ -61,17 +47,18 @@
                                 </div>
                             </div>
 
-                        </div>
-                        <!-- <p>Form value: {{ registerForm.value | json }}</p>
+
+                            <!-- <p>Form value: {{ registerForm.value | json }}</p>
                         <p>Form status: {{ registerForm.status | json }}</p>
 
                         <p>FirstName value: {{ registerForm.get('firstname').value }}</p> -->
 
-                        <button type="submit" [disabled]="!registerForm.valid" class="btn btn-success">Submit</button>
-                    </form>
+                            <button type="submit" [disabled]="!registerForm.valid" class="btn btn-success">Submit</button>
+                        </form>
 
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</header>
