--- a/src/styles.css
+++ b/src/styles.css
@@ -350,24 +350,35 @@ button:focus {
 }
 
 .mu-event-counter-block {
-    border: 2px solid #fff;
+    border: 0px solid #fff;
     border-radius: 50%;
     display: inline-block;
-    height: 180px;
-    width: 180px;
+    height: 100px;
+    width: 100px;
     text-align: center;
-    font-size: 22px;
+    font-size: 27px;
     color: #fff;
-    margin: 0 20px;
-    font-weight: 300;
+    margin: 0 8px;
+    font-weight: 400;
 }
 
 .mu-event-counter-block span {
     display: block;
     font-size: 40px;
     font-weight: 700;
-    padding-top: 56px;
+    padding-top: 0px;
     line-height: 40px;
+}
+
+.progress-bar {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  color: #fff;
+  background-color: #007bff;
 }
 
 
@@ -741,33 +752,31 @@ button:focus {
 /*--------------------*/
 
 
-/* SPEAKERS */
-
-
+/* team */
 /*--------------------*/
 
-#mu-speakers {
+#mu-team {
     background-color: #fff;
     display: inline;
     float: left;
     width: 100%;
 }
 
-.mu-speakers-area {
+.mu-team-area {
     display: inline;
     float: left;
     padding: 100px 0;
     width: 100%;
 }
 
-.mu-speakers-content {
+.mu-team-content {
     display: inline;
     float: left;
     margin-top: 50px;
     width: 100%;
 }
 
-.mu-single-speakers {
+.mu-single-team {
     padding: 0 10px;
     outline: none;
     text-align: center;
@@ -775,37 +784,110 @@ button:focus {
     transition: all 0.3s ease 0s;
 }
 
-.mu-speakers-slider .slick-next {
+.mu-team-slider .slick-next {
     right: -60px;
 }
 
-.mu-speakers-slider .slick-prev {
+.mu-team-slider .slick-prev {
     left: -60px;
 }
 
-.mu-single-speakers-info {
+.mu-single-team-info {
     display: inline;
     float: left;
     margin-top: 20px;
     width: 100%;
 }
 
-.mu-single-speakers-info h3 {
+.mu-single-team-info h3 {
     margin-bottom: 4px;
     font-size: 22px;
 }
 
-.mu-single-speakers-info p {
+.mu-single-team-info p {
     margin-bottom: 5px;
 }
 
-.mu-single-speakers-social {}
+.mu-single-team-social {}
 
-.mu-single-speakers-social li {
+.mu-single-team-social li {
     display: inline-block;
 }
 
-.mu-single-speakers-social li a {
+.mu-single-team-social li a {
+    display: inline-block;
+    margin-right: 5px;
+    -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+
+
+/*--------------------*/
+
+
+/*--------------------*/
+
+#mu-advisors {
+    background-color: #fff;
+    display: inline;
+    float: left;
+    width: 100%;
+}
+
+.mu-advisors-area {
+    display: inline;
+    float: left;
+    padding: 100px 0;
+    width: 100%;
+}
+
+.mu-advisors-content {
+    display: inline;
+    float: left;
+    margin-top: 50px;
+    width: 100%;
+}
+
+.mu-single-advisors {
+    padding: 0 10px;
+    outline: none;
+    text-align: center;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+}
+
+.mu-advisors-slider .slick-next {
+    right: -60px;
+}
+
+.mu-advisors-slider .slick-prev {
+    left: -60px;
+}
+
+.mu-single-advisors-info {
+    display: inline;
+    float: left;
+    margin-top: 20px;
+    width: 100%;
+}
+
+.mu-single-advisors-info h3 {
+    margin-bottom: 4px;
+    font-size: 22px;
+}
+
+.mu-single-advisors-info p {
+    margin-bottom: 5px;
+}
+
+.mu-single-advisors-social {}
+
+.mu-single-advisors-social li {
+    display: inline-block;
+}
+
+.mu-single-advisors-social li a {
     display: inline-block;
     margin-right: 5px;
     -webkit-transition: all 0.5s;
@@ -1503,22 +1585,22 @@ button:focus {
     .mu-menu-btn {
         right: 5%;
     }
-    .mu-speakers-slider .slick-next {
+    .mu-team-slider .slick-next {
         right: 0;
     }
-    .mu-speakers-slider .slick-prev {
+    .mu-team-slider .slick-prev {
         left: 0;
     }
-    .mu-speakers-slider .slick-next,
-    .mu-speakers-slider .slick-prev {
+    .mu-team-slider .slick-next,
+    .mu-team-slider .slick-prev {
         width: 40px;
         height: 40px;
     }
-    .mu-speakers-slider .slick-prev::before,
-    .mu-speakers-slider .slick-next::before {
+    .mu-team-slider .slick-prev::before,
+    .mu-team-slider .slick-next::before {
         font-size: 18px;
     }
-    .mu-single-speakers-info h3 {
+    .mu-single-team-info h3 {
         font-size: 18px;
     }
     .mu-pricing-conten {
@@ -1732,3 +1814,4 @@ button:focus {
         font-size: 22px;
     }
 }
+
