--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,35 +6,95 @@
   <!-- Start About -->
   <section id="mu-about">
     <div class="container">
+      <div class="mu-about-area">
       <div class="row">
-        <div class="col-md-12">
-          <div class="mu-about-area">
-            <!-- Start Feature Content -->
-            <div class="row">
-              <div class="col-md-6">
-                <div class="mu-about-left">
-                  <img class="" src="assets/images/about.jpg" alt="Men Speaker">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="mu-about-right">
-                  <h2>About Us</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam aliquam distinctio magni enim error
-                    commodi suscipit nobis alias nulla, itaque ex, vitae repellat amet neque est voluptatem iure maxime
-                    eius!</p>
-
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus in accusamus qui sequi nisi,
-                    sint magni, ipsam, porro nesciunt id veritatis quaerat ipsum consequatur laborum, provident veniam
-                    quibusdam placeat quam?
-                  </p>
-
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
-                    excepturi, cumque reiciendis.</p>
-                </div>
-              </div>
+          <img class="center-block" src="assets/images/icon/etherdelta.jpg" alt="EtherDelta">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <h2 class="text-center">About Ether Delta</h2>
+            <p>Ether Delta is a decentralized trading platform without any
+              involvement of an exchange involving any asset management.
+            </p>
+            <p>Decentralization can also be used to invoke the contract in a smart contract to implement the in-app token conversion</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-4">
+              <img src="assets/images/icon/multrans.png" alt="multi transaction img">
             </div>
-            <!-- End Feature Content -->
-
+            <div class="col-md-8">
+              <h6>Diversity</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
+                excepturi, cumque reiciendis.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-4">
+              <img src="assets/images/icon/decentralized.png" alt="multi transaction img">
+            </div>
+            <div class="col-md-8">
+              <h6>Decentralization</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
+                excepturi, cumque reiciendis.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-4">
+              <img src="assets/images/icon/nokyc.png" alt="multi transaction img">
+            </div>
+            <div class="col-md-8">
+              <h6>Unlock KYC</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
+                excepturi, cumque reiciendis.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-4">
+              <img src="assets/images/icon/trust.png" alt="multi transaction img">
+            </div>
+            <div class="col-md-8">
+              <h6>Trust</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
+                excepturi, cumque reiciendis.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-4">
+              <img src="assets/images/icon/secure.png" alt="multi transaction img">
+            </div>
+            <div class="col-md-8">
+              <h6>Secure</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
+                excepturi, cumque reiciendis.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-4">
+              <img src="assets/images/icon/fairness.png" alt="multi transaction img">
+            </div>
+            <div class="col-md-8">
+              <h6>Impartial</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis
+                excepturi, cumque reiciendis.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -74,34 +134,34 @@
   <!-- Start Schedule  -->
   <section id="mu-ico">
     <div class="container">
-    <div class="row">
-      <div class="col-md-10 col-md-offset-1">
-        <table class="table table-hover table-dark">
-          <tbody>
-          <tr class="black">
-            <td colspan="2">Total Supply of Tokens</td>
-            <td>150,000,000</td>
-          </tr>
-          <tr>
-            <td colspan="2">Token Sale Hard Cap</td>
-            <td>150,000,000</td>
-          </tr>
-          <tr>
-            <td colspan="2">Rate</td>
-            <td>ETH/EDT 1/8500</td>
-          </tr>
-          <tr>
-            <td colspan="2">Individual Min Eth</td>
-            <td>0.1</td>
-          </tr>
-          <tr>
-            <td colspan="2">Currencies Accepted</td>
-            <td>ETH</td>
-          </tr>
-          </tbody>
-        </table>
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <table class="table table-hover table-dark">
+            <tbody>
+            <tr class="black">
+              <td colspan="2">Total Supply of Tokens</td>
+              <td>150,000,000</td>
+            </tr>
+            <tr>
+              <td colspan="2">Token Sale Hard Cap</td>
+              <td>150,000,000</td>
+            </tr>
+            <tr>
+              <td colspan="2">Rate</td>
+              <td>ETH/EDT 1/8500</td>
+            </tr>
+            <tr>
+              <td colspan="2">Individual Min Eth</td>
+              <td>0.1</td>
+            </tr>
+            <tr>
+              <td colspan="2">Currencies Accepted</td>
+              <td>ETH</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
-    </div>
 
       <!--pie chart-->
       <div class="container">
@@ -110,7 +170,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-3 col-md-offset-2 jumbotron">
+          <div class="col-md-3 col-md-offset-2">
             <ul data-pie-id="svg">
               <li data-value="60">Water Buffalo (60)</li>
               <li data-value="20">Bison (20)</li>
@@ -127,7 +187,7 @@
           <div class="col-md-4 col-md-offset-1">
             <div id="my-cool-chart"></div>
           </div>
-          <div class="col-md-3 col-md-offset-1 jumbotron">
+          <div class="col-md-3 col-md-offset-1">
             <ul data-pie-id="my-cool-chart" data-options='{"donut": "true"}'>
               <li data-value="36">Pepperoni</li>
               <li data-value="14">Sausage</li>
@@ -159,10 +219,16 @@
             <div class="timeline-panel">
               <div class="timeline-heading">
                 <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+                <p>
+                  <small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small>
+                </p>
               </div>
               <div class="timeline-body">
-                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
+                  porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in
+                  elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti
+                  palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais
+                  bolis eu num gostis.</p>
               </div>
             </div>
           </li>
@@ -173,8 +239,17 @@
                 <h4 class="timeline-title">Mussum ipsum cacilds</h4>
               </div>
               <div class="timeline-body">
-                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-                <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
+                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
+                  porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in
+                  elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti
+                  palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais
+                  bolis eu num gostis.</p>
+                <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé,
+                  cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut
+                  mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis
+                  molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus
+                  scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
               </div>
             </div>
           </li>
@@ -185,7 +260,11 @@
                 <h4 class="timeline-title">Mussum ipsum cacilds</h4>
               </div>
               <div class="timeline-body">
-                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
+                  porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in
+                  elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti
+                  palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais
+                  bolis eu num gostis.</p>
               </div>
             </div>
           </li>
@@ -208,7 +287,11 @@
                 <h4 class="timeline-title">Mussum ipsum cacilds</h4>
               </div>
               <div class="timeline-body">
-                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
+                  porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in
+                  elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti
+                  palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais
+                  bolis eu num gostis.</p>
               </div>
             </div>
           </li>
@@ -216,7 +299,6 @@
       </div>
     </div>
   </section>
-
 
 
   <!-- Start Speakers -->
