--- a/src/assets/css/theme-color/jelly-bean-theme.css
+++ b/src/assets/css/theme-color/jelly-bean-theme.css
@@ -34,7 +34,7 @@ Author URI : http://www.markups.io/
 .mu-logo:hover,
 .mu-logo:focus,
 #mu-hero .navbar-default .navbar-brand,
-
+#mu-ico
 /* .mu-navbar .mu-menu li a:hover, */
 
 .mu-navbar .mu-menu li a:focus,
