--- a/src/assets/css/custom.scss
+++ b/src/assets/css/custom.scss
@@ -1,91 +1,116 @@
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id] li:nth-child(0) {
-  color: blue;
+    color: #75D69C;
 }
 
+
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id] li:nth-child(1) {
-  color: #4d00ff;
+    color: #5472D2;
 }
 
+
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id] li:nth-child(2) {
-  color: #9900ff;
+    color: #5AA1E3;
 }
 
+
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id] li:nth-child(3) {
-  color: #e500ff;
+    color: #8D6DC4;
 }
 
+
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id] li:nth-child(4) {
-  color: #ff00cc;
+    color: #F7BE68;
 }
 
+
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id] li:nth-child(5) {
-  color: #ff0080;
+    color: #ff0080;
 }
 
+
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id] li:nth-child(6) {
-  color: #ff0033;
+    color: #ff0033;
 }
+
 
 /* line 26, ../sass/pizza.scss */
-ul[data-pie-id] {
-  list-style: none;
-  padding: 10px;
-}
 
+ul[data-pie-id] {
+    list-style: none;
+    padding: 10px;
+}
 
 [data-pie-id='my-cool-chart'] li:nth-child(0) {
-  color: #d84200;
+    color: #8D6DC4;
 }
 
+
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id='my-cool-chart'] li:nth-child(1) {
-  color: #fc4d00;
+    color: #ff9668;
 }
 
+
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id='my-cool-chart'] li:nth-child(2) {
-  color: #ff6420;
+    color: #69B9F3;
 }
 
+
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id='my-cool-chart'] li:nth-child(3) {
-  color: #ff7d44;
+    color: #75D69C;
 }
 
+
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id='my-cool-chart'] li:nth-child(4) {
-  color: #ff9668;
+    color: #ff9668;
 }
 
+
 /* line 20, ../sass/pizza.scss */
+
 [data-pie-id='my-cool-chart'] li:nth-child(5) {
-  color: #ffaf8b;
+    color: #ffaf8b;
 }
+
 
 /* line 20, ../sass/pizza.scss */
-[data-pie-id='my-cool-chart'] li:nth-child(6) {
-  color: #ffc8af;
-}
 
+[data-pie-id='my-cool-chart'] li:nth-child(6) {
+    color: #ffc8af;
+}
 
 .jumbotron {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  border: 1px dashed deeppink;
+    position: static;
+    top: 80%;
+    transform: translateY(-80%);
+    border: 1px dashed deeppink;
 }
 
 .horizon-center {
-  position: absolute;
-  top: 50%;
-  left:50%;
-  transform: translate(-50%,-50%);
-  border: 1px dashed deeppink;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px dashed deeppink;
 }
