--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,40 +1,39 @@
-<div class="main__body">
-    <div class="container">
-
-        <div class="login__page">
-            <div class="row">
-                <div class="card col-md-4 col-md-offset-4">
-                    <div class="login__card">
-                        <div class="card-block">
-
-                            <form name="userform" method="post" #formCtrl="ngForm">
-                                <h3 align="center">Login Form</h3>
-                                <div class="form-group">
-                                    <label for="exampleInputEmail1">Email address</label>
-                                    <input type="email" class="form-control" [(ngModel)]="user.email" name="email" placeholder="Email" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputPassword1">Password</label>
-                                    <input type="password" class="form-control" [(ngModel)]="user.password" name="password" placeholder="Password" required>
-                                </div>
-
-                                <div class="form-group">
-                                    <button type="buton" class="btn btn-primary btn-block" style="margin-bottom: 20px" (click)="signInWithEmail()" [disabled]="formCtrl.form.invalid">
-                          Login with Email
-                        </button>
-                                </div>
-
-
-                            </form>
-
-                        </div>
-                    </div>
-                </div>
-
+<div class="container">
+    <div class="row login_box">
+        <div class="col-md-12 col-xs-12" align="center">
+            <div class="line">
+                <h3>12 : 30 AM</h3>
             </div>
+            <div class="wrapper"><img src="http://lorempixel.com/80/80/people" class="img-circle" /></div>
+            <h1>Hi Guest</h1>
+            <span>INDIAN</span>
         </div>
-        <!-- end card -->
+        <div class="col-md-6 col-xs-6 follow line text-center">
+            <h3>
+                125651 <br/> <span>FOLLOWERS</span>
+            </h3>
+        </div>
+        <div class="col-md-6 col-xs-6 follow line text-center">
+            <h3>
+                125651 <br/> <span>FOLLOWERS</span>
+            </h3>
+        </div>
 
+        <div class="col-md-12 col-xs-12 login_control">
+
+            <div class="control">
+                <div class="label">Email Address</div>
+                <input type="text" class="form-control" value="admin@gmail.com" />
+            </div>
+
+            <div class="control">
+                <div class="label">Password</div>
+                <input type="password" class="form-control" value="123456" />
+            </div>
+            <div class="text-center">
+                <button class="btn btn-orange">LOGIN</button>
+            </div>
+
+        </div>
     </div>
-    <!-- end container -->
 </div>
