--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -1,101 +1,101 @@
 <!-- Start menu  -->
 <nav class="navbar navbar-fixed-top navbar-default mu-navbar">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-              data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
 
-      <!-- Logo -->
-      <a class="navbar-brand" href="index.html">EtherDelta</a>
+            <!-- Logo -->
+            <a class="navbar-brand" href="index.html">EtherDelta</a>
 
-    </div>
+        </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav mu-menu navbar-right">
-        <li><a href="#mu-hero">Home</a></li>
-        <li><a href="#mu-about">About Us</a></li>
-        <li><a href="#mu-team">Team</a></li>
-        <li><a href="#mu-advisors">Advisors</a></li>
-        <li><a href="#mu-schedule">Schedule</a></li>
-        <li><a href="#mu-register">Register</a></li>
-        <li><a href="/login">Login</a></li>
-        <!-- <li><a href="#mu-pricing">Price</a></li>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav mu-menu navbar-right">
+                <li><a href="#mu-hero">Home</a></li>
+                <li><a href="#mu-about">About Us</a></li>
+                <li><a href="#mu-team">Team</a></li>
+                <li><a href="#mu-advisors">Advisors</a></li>
+                <li><a href="#mu-schedule">Schedule</a></li>
+                <li><a href="/register">Register</a></li>
+                <li><a href="/login">Login</a></li>
+                <!-- <li><a href="#mu-pricing">Price</a></li>
         <li><a href="#mu-speaker">Register</a></li>
         <li><a href="#mu-sponsors">Sponsors</a></li>
         <li><a href="#mu-contact">Contact</a></li> -->
-      </ul>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.navbar-collapse -->
-  </div>
-  <!-- /.container-fluid -->
+    <!-- /.container-fluid -->
 </nav>
 <!-- End menu -->
 
 <div class="mu-hero-overlay">
-  <div class="container">
-    <div class="mu-hero-area">
+    <div class="container">
+        <div class="mu-hero-area">
 
-      <!-- Start hero featured area -->
-      <div class="mu-hero-featured-area">
-        <!-- Start center Logo -->
-        <div class="mu-logo-area">
-          <!-- text based logo -->
-          <a class="mu-logo" href="#">BeFun</a>
-          <!-- image based logo -->
-          <!-- <a class="mu-logo" href="#"><img src="assets/images/logo.jpg" alt="logo img"></a> -->
-        </div>
-        <!-- End center Logo -->
-
-        <div class="mu-hero-featured-content">
-
-          <h2><Strong>DECENTRALIZED EXCHANGE</Strong></h2>
-          <h2><b>JOIN THE TRADING REVOLUTION</b></h2>
-          <!--<p class="mu-event-date-line">March 01, 2018. New York, USA</p>-->
-          <div class="mu-event-counter-area">
-            <div id="mu-event-counter">
-
-            </div>
-          </div>
-
-
-          <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-              <div class="progress">
-                <div id="progress-solid-line" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10"
-                     aria-valuemin="0" aria-valuemax="100">
-                  <p id="totalRaisedPercent"></p>
+            <!-- Start hero featured area -->
+            <div class="mu-hero-featured-area">
+                <!-- Start center Logo -->
+                <div class="mu-logo-area">
+                    <!-- text based logo -->
+                    <a class="mu-logo" href="#">BeFun</a>
+                    <!-- image based logo -->
+                    <!-- <a class="mu-logo" href="#"><img src="assets/images/logo.jpg" alt="logo img"></a> -->
                 </div>
-              </div>
-              <div class="row">
-                <h2 id="totalRaised"></h2>
-              </div>
-            </div>
-          </div>
-        </div>
+                <!-- End center Logo -->
 
-        <div class="mu-hero-featured-content">
-          <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal " data-target="#myModal ">
+                <div class="mu-hero-featured-content">
+
+                    <h2>
+                        <Strong>DECENTRALIZED EXCHANGE</Strong>
+                    </h2>
+                    <h2><b>JOIN THE TRADING REVOLUTION</b></h2>
+                    <!--<p class="mu-event-date-line">March 01, 2018. New York, USA</p>-->
+                    <div class="mu-event-counter-area">
+                        <div id="mu-event-counter">
+
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-md-8 col-md-offset-2">
+                            <div class="progress">
+                                <div id="progress-solid-line" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+                                    <p id="totalRaisedPercent"></p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <h2 id="totalRaised"></h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mu-hero-featured-content">
+                    <button type=" button" class="btn btn-lg btn-primary" data-toggle="modal " data-target="#myModal ">
             Whitepaper
           </button>
 
-        </div>
-      </div>
-      <div class="mu-nav-arrow-area ">
-        <a class="mu-nav-arrow-btn" href="#mu-about">
-          <i aria-hidden="true" class="fa fa-arrow-down"></i>
-        </a>
-      </div>
+                </div>
+            </div>
+            <div class="mu-nav-arrow-area ">
+                <a class="mu-nav-arrow-btn" href="#mu-about">
+                    <i aria-hidden="true" class="fa fa-arrow-down"></i>
+                </a>
+            </div>
 
+        </div>
+        <!-- End hero featured area -->
+        <!--<particles [params]="myParams" [style]="myStyle" [width]="width" [height]="height"></particles>-->
     </div>
-    <!-- End hero featured area -->
-    <!--<particles [params]="myParams" [style]="myStyle" [width]="width" [height]="height"></particles>-->
-  </div>
 
 </div>
