--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -37,22 +37,19 @@
                             <div class="form-group">
                                 <label class="label">Terms and conditions</label>
                                 <div style="border: 1px solid #e5e5e5; height: 200px; overflow: auto; padding: 10px;">
-                                    <p>Lorem ipsum dolor sit amet, veniam numquam has te. No suas nonumes recusabo mea, est ut graeci definitiones. His ne melius vituperata scriptorem, cum paulo copiosae conclusionemque at. Facer inermis ius in, ad brute
-                                        nominati referrentur vis. Dicat erant sit ex. Phaedrum imperdiet scribentur vix no, ad latine similique forensibus vel.</p>
-                                    <p>Dolore populo vivendum vis eu, mei quaestio liberavisse ex. Electram necessitatibus ut vel, quo at probatus oportere, molestie conclusionemque pri cu. Brute augue tincidunt vim id, ne munere fierent rationibus mei.
-                                        Ut pro volutpat praesent qualisque, an iisque scripta intellegebat eam.</p>
-                                    <p>Mea ea nonumy labores lobortis, duo quaestio antiopam inimicus et. Ea natum solet iisque quo, prodesset mnesarchum ne vim. Sonet detraxit temporibus no has. Omnium blandit in vim, mea at omnium oblique.</p>
-                                    <p>Eum ea quidam oportere imperdiet, facer oportere vituperatoribus eu vix, mea ei iisque legendos hendrerit. Blandit comprehensam eu his, ad eros veniam ridens eum. Id odio lobortis elaboraret pro. Vix te fabulas partiendo.</p>
-                                    <p>Natum oportere et qui, vis graeco tincidunt instructior an, autem elitr noster per et. Mea eu mundi qualisque. Quo nemore nusquam vituperata et, mea ut abhorreant deseruisse, cu nostrud postulant dissentias qui. Postea
-                                        tincidunt vel eu.</p>
-                                    <p>Ad eos alia inermis nominavi, eum nibh docendi definitionem no. Ius eu stet mucius nonumes, no mea facilis philosophia necessitatibus. Te eam vidit iisque legendos, vero meliore deserunt ius ea. An qui inimicus inciderint.</p>
+                                    <p>Please confirm that you are NOT a citizen of or resident of the People's Republic of China or an entity formed under the laws of the People's Republic of China (each a &quot;Chinese Person&quot;) nor are you purchasing
+                                        Etherdelta Tokens or signing on behalf of a Chinese Person. </p>
+                                    <p>Confirm that you are not a United States citizen, resident or green card holder, or have a primary residence or domicile in the United States, including Puerto Rico, the U.S. Virgin Islands or any other territories
+                                        of the United States and are not purchasing Etherdelta tokens or signing on behalf of a United States citizen, resident or entity.</p>
+
+
                                 </div>
                             </div>
                         </div>
                         <div class="control">
                             <div class="form-group">
                                 <div class="checkbox login-padding-left">
-                                    <input type="checkbox" name="agreement" formControlName="agreement" value="1"> I Agree with the terms and conditions
+                                    <label><input type="checkbox" name="agreement" formControlName="agreement" value=""> I Agree with the terms and conditions</label>
                                 </div>
                             </div>
                         </div>
